docs(java): migrate build tool documentation from Gradle to Maven with latest versions
Replace all Gradle references with Maven equivalents across Java documentation,
using latest plugin versions as of January 2026.

## Changes

### Build Tool Migration (52 Gradle references → Maven)
- Replaced build.gradle.kts examples with pom.xml configurations
- Updated gradle-wrapper.properties to maven-wrapper.properties
- Changed dependency locking from gradle.lockfile to <dependencyManagement>
- Replaced ./gradlew commands with ./mvnw equivalents

### Version Updates (Latest as of 2026-01-21)
- Maven: 3.9.9 → 3.9.12 (latest stable)
- jacoco-maven-plugin: 0.8.12 → 0.8.15
- maven-compiler-plugin: 3.13.0 → 3.14.1
- maven-enforcer-plugin: 3.5.0 → 3.6.2
- error_prone_core: 2.36.0 → 2.46.0
- nullaway: 0.12.4 → 0.12.15
- checker: 3.48.2 → 3.53.0
- dependency-check-maven: 10.0.3/10.0.4 → 12.2.0

### Files Modified (11 total)
**Java Documentation (10 files)**:
- README.md - Build tools overview, .sdkmanrc, wrapper config
- best-practices.md - Build automation, reproducibility, dependency management
- type-safety.md - Error Prone, NullAway, Checker Framework configs
- test-driven-development.md - JUnit, Mockito, AssertJ, TestContainers, JaCoCo
- security.md - OWASP Dependency-Check configuration
- domain-driven-design.md - Axon Framework dependency
- functional-programming.md - Vavr library dependency
- behaviour-driven-development.md - Cucumber dependencies
- release-17.md - Build tool requirements
- idioms.md - Configuration checklist

**Governance (1 file)**:
- governance/principles/software-engineering/README.md - Reproducibility example

### Key Configuration Updates

**Maven Wrapper**:
- distributionUrl: apache-maven-3.9.12-bin.zip
- wrapperUrl: maven-wrapper-3.3.2.jar

**Build Commands**:
- ./gradlew build → ./mvnw clean install
- ./gradlew test → ./mvnw test
- ./gradlew dependencyCheckAnalyze → ./mvnw dependency-check:check
- ./gradlew dependencyUpdates → ./mvnw versions:displ